--- a/linux/debian/changelog
+++ b/linux/debian/changelog
@@ -1,3 +1,9 @@
+asl-dahdi-linux (1:3.0.1.20200801-0.2) unstable; urgency=medium
+
+  * Build for bullseye
+
+ -- Rick Elrod <me@ai5a.net>  Wed, 07 Sep 2022 00:26:34 -0500
+
 asl-dahdi-linux (1:3.0.1.20200801-0.1) unstable; urgency=medium
 
   * package naming convention change
