--- a/tools/debian/changelog
+++ b/tools/debian/changelog
@@ -1,3 +1,9 @@
+asl-dahdi-tools (1:3.0.0.1.3) unstable; urgency=medium
+
+  * build for bullseye
+
+ -- Rick Elrod <me@ai5a.net>  Tue, 06 Sep 2022 23:51:33 -0500
+
 asl-dahdi-tools (1:3.0.0.1.2) unstable; urgency=medium
 
   * minor dependency changes
